GNOME Bugzilla – Bug 788470
gnome-desktop-testing regression: no longer logs to stdout/stderr at all
Last modified: 2018-11-02 10:54:55 UTC
gnome-desktop-testing in git doesn't seem to log to stdout/stderr at all, only to the systemd Journal. This is an incompatible change which will break its current uses in Debian's autopkgtest infrastructure: autopkgtest doesn't capture the Journal, only stdio. I would prefer the previous behaviour: log to the Journal if available, and to stdio if that isn't also the Journal. Relatedly, gnome-desktop-testing git is no longer portable to !Linux, because the Journal specifically isn't portable. I would like to be able to continue using it for projects that are portable to !Linux (like dbus) by reading its stdio streams. I'll try to put a patch together at some point. See also Bug #777443, which has a patch to make g-d-t optionally output TAP as well as consuming it (which will no longer apply, but I'll try to rebase it). I'm tempted to solve both at the same time by making g-d-t *always* output TAP to stdout, since TAP is designed to be human-readable anyway.
Created attachment 365844 [details] [review] [1/4] Factor out test_log() to wrap sd_journal_send
Created attachment 365845 [details] [review] [2/4] Output messages by default if stdout is not the Journal Otherwise the change in behaviour since 2016.1 would be a regression.
Created attachment 365846 [details] [review] [3/4] Make libsystemd optional again As much as I'd like to stop supporting non-systemd Linux systems, some people get very upset by the suggestion that systemd is mandatory on Linux, and it isn't portable to non-Linux in any case.
Created attachment 365847 [details] [review] [4/4] Add a TAP output mode --- This is less complete than what I attached to Bug #777443, but a lot simpler. It just diverts tests' stdout to our stderr, so they don't get mixed up with TAP on stdout.
CCing Emmanuele since he has somehow avoided getting marked as a maintainer of the gnome-continuous Bugzilla product.
(In reply to Philip Withnall from comment #5) > CCing Emmanuele since he has somehow avoided getting marked as a maintainer > of the gnome-continuous Bugzilla product. And yet I'm subscribed to all the continuous bugmail. ;-) I'll try and have a look ASAP.
Please could someone take a look at this? Colin Walters recently released gnome-desktop-testing 2018.1, but I can't put that version in Debian without causing regressions (it now requires systemd, isn't portable to non-Linux and no longer logs to stdout/stderr).
Review of attachment 365844 [details] [review]: Okay
Review of attachment 365845 [details] [review]: Sure
Review of attachment 365846 [details] [review]: Okay
Review of attachment 365847 [details] [review]: Nice, thanks!
These were merged a while ago: commit 5fbc6024220496f7f48470bcf017632e05ad400a Author: Simon McVittie <smcv@debian.org> Date: Thu Dec 21 17:18:03 2017 +0000 Add a TAP output mode Signed-off-by: Simon McVittie <smcv@debian.org> Bug: https://bugzilla.gnome.org/show_bug.cgi?id=788470 Reviewed-by: Emmanuele Bassi <ebassi@gnome.org> commit 802cfd283372a1ae3a5d91afe84afb2cbf89912e Author: Simon McVittie <smcv@debian.org> Date: Thu Dec 21 17:30:32 2017 +0000 Make libsystemd optional again As much as I'd like to stop supporting non-systemd Linux systems, some people get very upset by the suggestion that systemd is mandatory on Linux, and it isn't portable to non-Linux in any case. Signed-off-by: Simon McVittie <smcv@debian.org> Bug: https://bugzilla.gnome.org/show_bug.cgi?id=788470 Reviewed-by: Emmanuele Bassi <ebassi@gnome.org> commit cd78f8f946822f29a71e7acedc4d3db6b5e43730 Author: Simon McVittie <smcv@debian.org> Date: Thu Dec 21 16:27:20 2017 +0000 Output messages by default if stdout is not the Journal Otherwise the change in behaviour since 2016.1 would be a regression. Signed-off-by: Simon McVittie <smcv@debian.org> Bug: https://bugzilla.gnome.org/show_bug.cgi?id=788470 Reviewed-by: Emmanuele Bassi <ebassi@gnome.org> commit 0447403f6c8e7c8602123aef237d368437414002 Author: Simon McVittie <smcv@debian.org> Date: Thu Nov 9 13:26:11 2017 +0000 Factor out test_log() to wrap sd_journal_send Signed-off-by: Simon McVittie <smcv@debian.org> Bug: https://bugzilla.gnome.org/show_bug.cgi?id=788470 Reviewed-by: Emmanuele Bassi <ebassi@gnome.org>